2007-03-16  Martin Leidig  <mleidig@schlund.de>

	Added new IWrapper definition attribute 'implements', which
	produces an according 'implements' declaration in the generated 
	class and can be used to tag IWrappers, e.g. for common handling
	of IWrappers which can't have a common base class, but have a
	set of common fields, which should be handled by the same method.

	* projects/core/build/iwrapper.xsl
	* projects/core/schema/interfacewrapper200401.xsd

2007-03-16  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/editor2/core/dom/IncludePartThemeVariant.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/internal/CommonIncludePartThemeVariantImpl.java: 
	* src/de/schlund/pfixcore/editor2/frontend/handlers/CommonUploadIncludePartHandler.java: 
	* src/de/schlund/pfixcore/editor2/frontend/resources/CommonIncludesResource.java: 
	* src/de/schlund/pfixcore/editor2/frontend/resources/CommonIncludesResourceImpl.java: 
	* src/de/schlund/pfixcore/editor2/frontend/wrappers/CommonUploadIncludePart.iwrp: 
	* projects/core/editor2/txt/util_includes.xml: 
	Added "preserve format" option to editor.

2007-03-15  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/beans/metadata/DOMInit.java: ignore
	missing beanmetadata.xml
	* src/de/schlund/pfixcore/webservice/config/GlobalServiceConfig.java: ignore
	beanmetadata.xml in difference check
	* skel/projects/common/conf/factory.xml: remove ExceptionHandler

2007-03-15  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/editor2/txt/util_includes.xml: 
	* projects/core/editor2/xsl/runtime.xsl: 
	Added escaping for include part names on javascript code generation
	to fix problem with part names containing quotes.

2007-03-02  Martin Leidig  <mleidig@schlund.de>

	Extended support for JSON Bean serialization/deserialization customization.
	The annotation @Alias can be used to override the property names used within 